// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders badge value when provided 1`] = `
<Touchable
  accessibilityComponentType="button"
  accessibilityLabel="1-2-3 filtered"
  accessibilityTraits={
    Array [
      "button",
    ]
  }
  delayPressIn={50}
  onPress={[Function]}
  style={
    Array [
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "center",
        "paddingHorizontal": 8,
      },
      Object {
        "marginTop": 16,
      },
    ]
  }
>
  <Text
    color="blackColor"
    markdown={false}
    markdownStyle={Object {}}
    style={
      Array [
        Object {
          "fontFamily": "Roboto-Medium",
          "textAlign": "center",
        },
        Object {
          "color": "rgb(44, 218, 157)",
        },
      ]
    }
    type="small"
  >
    1-2-3 filtered
  </Text>
  <Component
    style={
      Object {
        "marginLeft": 6,
      }
    }
  >
    <NumberBadge
      value={2}
    />
  </Component>
</Touchable>
`;

exports[`renders correct styles when inactive 1`] = `
<Touchable
  accessibilityComponentType="button"
  accessibilityLabel="One two three filtered"
  accessibilityTraits={
    Array [
      "button",
    ]
  }
  delayPressIn={50}
  onPress={[Function]}
  style={
    Array [
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "center",
        "paddingHorizontal": 8,
      },
      Object {
        "marginTop": 16,
      },
    ]
  }
>
  <Text
    color="blackColor"
    markdown={false}
    markdownStyle={Object {}}
    style={
      Array [
        Object {
          "fontFamily": "Roboto-Medium",
          "textAlign": "center",
        },
        Object {
          "color": "#ffffff",
        },
      ]
    }
    type="small"
  >
    1-2-3 filtered
  </Text>
</Touchable>
`;

exports[`renders correctly 1`] = `
<Touchable
  accessibilityComponentType="button"
  accessibilityLabel="1-2-3 filtered"
  accessibilityTraits={
    Array [
      "button",
    ]
  }
  delayPressIn={50}
  onPress={[Function]}
  style={
    Array [
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "center",
        "paddingHorizontal": 8,
      },
      Object {
        "marginTop": 16,
      },
    ]
  }
>
  <Text
    color="blackColor"
    markdown={false}
    markdownStyle={Object {}}
    style={
      Array [
        Object {
          "fontFamily": "Roboto-Medium",
          "textAlign": "center",
        },
        Object {
          "color": "rgb(44, 218, 157)",
        },
      ]
    }
    type="small"
  >
    1-2-3 filtered
  </Text>
</Touchable>
`;
